NGP-TWC/wdp-abstract-canvas#717 fix context menu from going off screen (#767)

--- a/canvas_modules/common-canvas/assets/styles/common-canvas.css
+++ b/canvas_modules/common-canvas/assets/styles/common-canvas.css
@@ -325,6 +325,7 @@ polyline.link-arrow-head {
   font-family: IBMHLVlight;
   position: absolute;
   z-index: 2;
+	overflow-y: auto;
 }
 
 .context-menu-popover.popover>.arrow{
